[package]
name = "json2csv"
version = "0.2.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"
description = "A tool to convert JSON to CSV"
license = "MIT"

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
pico-args = "0.5"
rust-flatten-json = "0.1.0"
